@@ -125,6 +125,15 @@ def test_expressions():
             print("Input:    ", expr)
             print("Result:   ", res)
             raise DefinitionError("")
+        displayString = ast.get_display_string()
+        if res != displayString:
+            # note: if the expression contains an anon name then this will trigger a falsely
+            print("")
+            print("Input:    ", expr)
+            print("Result:   ", res)
+            print("Display:  ", displayString)
+            raise DefinitionError("")
+
     # primary
     exprCheck('nullptr', 'LDnE')
     exprCheck('true', 'L1E')
