@@ -16,6 +16,9 @@ Features added
 Bugs fixed
 ----------
 
+- #7763: C and C++, don't crash during display stringification of unary
+  expressions and fold expressions.
+
 Testing
 --------
 
